tests-integration/fixtures/checking/166_derive_traversable_missing_superclass/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Compose ::
  forall (t5 :: Type) (t9 :: Type) (f :: (t5 :: Type) -> Type) (g :: (t9 :: Type) -> (t5 :: Type))
    (a :: (t9 :: Type)).
    (f :: (t5 :: Type) -> Type) ((g :: (t9 :: Type) -> (t5 :: Type)) (a :: (t9 :: Type))) ->
    Compose @(t9 :: Type)
      (f :: (t5 :: Type) -> Type)
      (g :: (t9 :: Type) -> (t5 :: Type))
      (a :: (t9 :: Type))

Types
Compose ::
  forall (t5 :: Type) (t9 :: Type).
    ((t5 :: Type) -> Type) -> ((t9 :: Type) -> (t5 :: Type)) -> (t9 :: Type) -> Type

Data
Compose
  Quantified = :2
  Kind = :0


Roles
Compose = [Representational, Representational, Nominal]

Derived
derive (Traversable (f :: Type -> Type), Traversable (g :: Type -> Type)) => Traversable (Compose @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (Compose @Type @Type (f :: Type -> Type) (g :: Type -> Type))
  --> 7:1..7:76
  |
7 | derive instance (Traversable f, Traversable g) => Traversable (Compose f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Foldable (Compose @Type @Type (f :: Type -> Type) (g :: Type -> Type))
  --> 7:1..7:76
  |
7 | derive instance (Traversable f, Traversable g) => Traversable (Compose f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
